--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Mac OS
+.DS_Store
+
 # Built application files
 *.apk
 *.ap_
@@ -25,3 +28,7 @@ proguard/
 
 # Log Files
 *.log
+
+# Android Studio
+/.idea
+.iml
